--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,12 @@
 @import 'tailwindcss';
 
 @theme {
-  --color-base-100: #FFFFFF;
-  --color-base-200: #F8F9FA;
-  --color-base-300: #E9ECEF;
+  --color-base-100: #ffffff;
+  --color-base-200: #f8f9fa;
+  --color-base-300: #e9ecef;
   --color-base-content: #010431;
-  --color-primary: #6971FB;
-  --color-secondary: #5C5C70;
+  --color-primary: #6971fb;
+  --color-secondary: #5c5c70;
 }
 
 @layer base {
